CSS Grid fix for flag stretching

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -414,8 +414,8 @@ body::-webkit-scrollbar-thumb {
       height: 100%;
       width: 100%; }
     .language-pop-up__button__text {
-      display: flex;
-      justify-content: center;
+      display: grid;
+      justify-items: center;
       align-items: center;
       width: 100%;
       height: 100%;
