--- a/sass/components/_language-pop-up.scss
+++ b/sass/components/_language-pop-up.scss
@@ -84,8 +84,8 @@
         }
 
         &__text {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            justify-items: center;
             align-items: center;
             width: 100%;
             height: 100%;
